--- a/.travis.yml
+++ b/.travis.yml
@@ -3,3 +3,6 @@ go:
 - 1.3
 - 1.4
 - tip
+notifications:
+  slack:
+    secure: X31qxTJDIUzAF23gF/pUn53sTwQJw+JrTyNW7xNSmSkgLv/+biLlGunQzMHJSTmeVPhizNBHqVBW0kfg9e6H7OYFbjcUKX1ur429Q1eiZv2XvVhGZiBaAU9Ziq9sbSgAfnrdKeqW+btxpbEJV0HoQ0F2b9I/pBmfw/zpNfLxhmY=
